@@ -5,7 +5,7 @@ import org.openremote.agent.protocol.tradfri.device.Device;
 import org.openremote.agent.protocol.tradfri.device.Gateway;
 import org.openremote.agent.protocol.tradfri.device.event.EventHandler;
 import org.openremote.agent.protocol.tradfri.device.event.GatewayEvent;
-import org.openremote.container.util.UniqueIdentifierGenerator;
+import org.openremote.model.util.UniqueIdentifierGenerator;
 import org.openremote.model.Container;
 import org.openremote.model.asset.Asset;
 import org.openremote.model.asset.agent.Agent;
@@ -17,10 +17,10 @@ import org.openremote.model.attribute.MetaItem;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.syslog.SyslogCategory;
 import org.openremote.model.util.TextUtil;
+import org.openremote.model.value.ValueHolder;
 
 import java.util.*;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 import static org.openremote.model.asset.impl.LightAsset.BRIGHTNESS;
 import static org.openremote.model.syslog.SyslogCategory.PROTOCOL;
@@ -132,9 +132,9 @@ public class TradfriProtocol extends AbstractProtocol<TradfriAgent, DefaultAgent
     }
 
     @Override
-    protected void doLinkedAttributeWrite(Attribute<?> attribute, DefaultAgentLink agentLink, AttributeEvent event, Object processedValue) {
+    protected void doLinkedAttributeWrite(DefaultAgentLink agentLink, AttributeEvent event, Object processedValue) {
 
-        Device device = tradfriDevices.get(event.getAttributeRef().getId());
+        Device device = tradfriDevices.get(event.getRef().getId());
 
         if (device != null) {
             tradfriConnection.controlDevice(device, event);
@@ -150,18 +150,17 @@ public class TradfriProtocol extends AbstractProtocol<TradfriAgent, DefaultAgent
 
             // Find all existing child assets of this agent that have a deviceId attribute
             List<Asset<?>> childAssets = assetService.findAssets(
-                agent.getId(),
                 new AssetQuery().attributeName(TradfriAsset.DEVICE_ID.getName()));
 
             List<String> obsoleteAssetIds = childAssets.stream()
                 .map(asset -> {
-                    Integer deviceId = asset.getAttributes().getValueOrDefault(TradfriAsset.DEVICE_ID);
+                    Integer deviceId = asset.getAttribute(TradfriAsset.DEVICE_ID).flatMap(ValueHolder::getValue).orElse(null);
                     boolean isObsolete = deviceId != null && Arrays.stream(devices)
                         .noneMatch(device -> deviceId.equals(device.getInstanceId()));
                     return isObsolete ? asset.getId() : null;
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
             if (!obsoleteAssetIds.isEmpty()) {
                 LOG.finest("Removing " + obsoleteAssetIds.size() + " obsolete asset(s): " + this);
