@@ -35,12 +35,12 @@ import org.openremote.model.attribute.Attribute;
 import org.openremote.model.attribute.AttributeMap;
 import org.openremote.model.attribute.AttributeRef;
 import org.openremote.model.datapoint.AssetDatapoint;
-import org.openremote.model.datapoint.AssetPredictedDatapoint;
+import org.openremote.model.datapoint.Datapoint;
+import org.openremote.model.datapoint.ValueDatapoint;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.query.filter.AttributePredicate;
 import org.openremote.model.query.filter.NameValuePredicate;
 import org.openremote.model.query.filter.StringPredicate;
-import org.openremote.model.util.Pair;
 import org.openremote.model.value.ForecastConfiguration;
 import org.openremote.model.value.ForecastConfigurationWeightedExponentialAverage;
 import org.openremote.model.value.MetaItemType;
@@ -48,9 +48,6 @@ import org.openremote.model.value.MetaItemType;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.time.Duration;
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.*;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
@@ -210,7 +207,7 @@ public class ForecastService extends RouteBuilder implements ContainerService {
                             .count() == 0;
                     })
                     .map(attr -> new ForecastAttribute(asset, attr))
-                    .collect(Collectors.toList())
+                    .toList()
                 );
 
                 forecastTaskManager.delete(attributesToDelete);
@@ -361,6 +358,7 @@ public class ForecastService extends RouteBuilder implements ContainerService {
             }
         }
 
+        @SuppressWarnings("OptionalGetWithoutIsPresent")
         private void calculateForecasts() {
             final long now = timerService.getCurrentTimeMillis();
             List<ForecastAttribute> attributesToCalculate = new ArrayList<>();
@@ -411,12 +409,12 @@ public class ForecastService extends RouteBuilder implements ContainerService {
                     }).toList();
 
                     if (forecastTimestamps.size() >= forecastValues.size()) {
-                        List<Pair<?, LocalDateTime>> datapoints = IntStream
+                        List<ValueDatapoint<?>> datapoints = IntStream
                             .range(0, forecastValues.size())
                             .filter(i -> forecastValues.get(i).isPresent())
-                            .mapToObj(i -> new Pair<>(
-                                forecastValues.get(i).get(),
-                                LocalDateTime.ofInstant(Instant.ofEpochMilli(forecastTimestamps.get(i)), ZoneId.systemDefault()))
+                            .mapToObj(i -> new ValueDatapoint<>(
+                                forecastTimestamps.get(i),
+                                forecastValues.get(i).get())
                             )
                             .collect(Collectors.toList());
 
@@ -531,12 +529,12 @@ public class ForecastService extends RouteBuilder implements ContainerService {
             // Attr(t) = Attr(t-p) * a + Attr(t-2p) * (1 - a)
             List<Object> values = datapoints
                 .stream()
-                .map(dp -> dp.getValue())
+                .map(Datapoint::getValue)
                 .collect(Collectors.toList());
             double R = datapoints.size();
             double a = 2 / (R + 1);
 
-            Class<?> clazz = attribute.getType().getType();
+            Class<?> clazz = attribute.getTypeClass();
             if (Long.class == clazz || Integer.class == clazz || Short.class == clazz || Byte.class == clazz ||
                 Double.class == clazz || Float.class == clazz) {
                 if (values.size() == 1) {
@@ -566,7 +564,7 @@ public class ForecastService extends RouteBuilder implements ContainerService {
                     }
                 }
                 return value;
-            } else if (attribute.getType().getType() == BigDecimal.class) {
+            } else if (attribute.getTypeClass() == BigDecimal.class) {
                 if (values.size() == 1) {
                     values.add(0, BigDecimal.valueOf(0));
                 }
@@ -576,7 +574,7 @@ public class ForecastService extends RouteBuilder implements ContainerService {
                     .reduce((olderValue, oldValue) ->
                         ((BigDecimal)oldValue).multiply(BigDecimal.valueOf(a)).add(((BigDecimal)olderValue).multiply(BigDecimal.valueOf(1 - a)))
                     );
-            } else if (attribute.getType().getType() == BigInteger.class) {
+            } else if (attribute.getTypeClass() == BigInteger.class) {
                 if (values.size() == 1) {
                     values.add(0, BigInteger.valueOf(0));
                 }
@@ -731,10 +729,10 @@ public class ForecastService extends RouteBuilder implements ContainerService {
         }
 
         private List<Long> loadForecastTimestampsFromDb(AttributeRef attributeRef, long now) {
-            List<AssetPredictedDatapoint> datapoints = assetPredictedDatapointService.getDatapoints(attributeRef);
+            List<ValueDatapoint> datapoints = assetPredictedDatapointService.getDatapoints(attributeRef);
             List<Long> timestamps = datapoints
                 .stream()
-                .map(datapoint -> datapoint.getTimestamp())
+                .map(ValueDatapoint::getTimestamp)
                 .filter(timestamp -> timestamp >= now)
                 .sorted()
                 .collect(Collectors.toList());;
